Fixed overflow issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,6 +56,18 @@ a {
 	background-color: #fefefe;
 }
 
-/* .sections {
-	transform: scale(1);
+.sections {
+	/* transform: scale(1); */
+	scroll-snap-type: y mandatory;
+}
+
+section {
+	scroll-snap-align: start;
+	scroll-snap-stop: normal;
+}
+
+/* * {
+	background: #000 !important;
+	color: #0f0 !important;
+	outline: solid #f00 1px !important;
 } */
